test/part2/success/typage_struct1-2.c

struct test{
	int x;
};

int main(){

	struct test *t;
	int x;

	x = t->x;
}
