test/part2/fail/unbound_member.c


struct t {
	int b;
};



int main () {

	struct t a;

	a.z;


}
